# BCCC_Temperature_SAO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  diffuser_print.3mf  starting_prompt.txt
hardware/: README_HW.md
hardware/bccc_sao_rp2350a/: #auto_saved_files#  .gitignore  3-digit-multiplexer.kicad_sch  8seg_digit.kicad_sch  bccc_sao_rp2350a.kicad_pro  bccc_sao_rp2350a.kicad_sch  idealdiode.kicad_sch
hardware/bccc_sao_rp2350a/Custom_LED_footprint.pretty/: LED-SMD_L1.7-W1.1-R-RD_BULE.kicad_mod
hardware/bccc_sao_rp2350a/production/: netlist.ipc
src/: display.c  display.h  ds18b20.c  ds18b20.h  main.c  temp.c  temp.h
